--- a/client/stylesheet/style.css
+++ b/client/stylesheet/style.css
@@ -1,3 +1,26 @@
 /* Style sheet */
 
-/* NOTE: APPLICATION CSS GOES HERE! */
+/* Line Style */
+/* Sections was copied from D3js.org
+   It is intended for a starting point.
+*/
+body {
+  font: 10px sans-serif;
+}
+
+.axis path,
+.axis line {
+  fill: none;
+  stroke: #000;
+  shape-rendering: crispEdges;
+}
+
+.x.axis path {
+  display: none;
+}
+
+.line {
+  fill: none;
+  stroke: steelblue;
+  stroke-width: 1.5px;
+}
