Migrating to Blaze protocol
File reformatting

going from d3 to blaze

--- a/client/app/layout/landing.html
+++ b/client/app/layout/landing.html
@@ -1,15 +1,16 @@
 <template name="landing">
 		<!-- HEADER -->
-		<div id="header">
+		<div class="header">
 			{{> header}}
 		</div>
 
 		<!-- MAIN -->
-		<div id="container">
+		<div class="container">
+			{{> multiLine}}
 		</div>
 
 		<!-- FOOTER -->
-		<div id="footer">
+		<div class="footer">
 			{{> footer}}
 		</div>
 </template>
